--- a/manager/manager.html
+++ b/manager/manager.html
@@ -12,28 +12,32 @@
 </head>
 <body>
     <div class="welcome-title"><span>Welcome Manager</span></div>
+    <div class="container">
+        <div class="innermenu">
+            <button id="projectButton">Create project</button>   
+            <button id="ManagerButton"><a href="./Aprovetime.html">Approve TimeSheets</a></button>
+        </div>
+        <div class="logoutdiv">
+            <button id="logoutButton">Logout</button>
+        </div>
+  </div>
     
-    <div class="menu">
-    <button id="projectButton">Create project</button>   
-    <button id="ManagerButton"><a href="./Aprovetime.html">Approve TimeSheets</a></button>
-    </div>
-
 
     <div id="projectCreation">
         <form id="projectCreationForm">
-            <label for="projectName">Project name</label>
+            <label for="projectName">Project name</label><br>
             <input type="text" id="projectName" name="projectName" placeholder="ProjectName" required> <br><br>
 
-            <label for="projectStartDate">Start Date</label>
+            <label for="projectStartDate">Start Date</label><br>
             <input type="date" id="projectStartDate" name="projectStartDate"  required> <br><br>
 
-            <label for="projectEndDate">End Date</label>
+            <label for="projectEndDate">End Date</label><br>
             <input type="date" id="projectEndDate" name="projectEndDate"  required> <br><br>
 
-            <label for="ProjectManager">Manager</label>
+            <label for="ProjectManager">Manager</label><br>
             <input type="text" id="ProjectManager" name="ProjectManager" placeholder="ProjectManager" required> <br><br>
 
-            <label for="projectHoursSpent">Total Hours</label>
+            <label for="projectHoursSpent">Total Hours</label><br>
             <input type="number" id="projectHoursSpent" name="projectHoursSpent" placeholder="0" required> <br><br>
 
             <input type="submit" class="sbmt" value="Create">
