--- a/private/userpage.html
+++ b/private/userpage.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="userpage.css">
 </head>
 <body>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <div class="welcome-title"><span>TimeSheets</span></div>
+    <div class="container">
+        <div class="innermenu">
+            <button id="CurrentTimesheet">Current Timesheet</button>   
+            <button id="TimeSheetHistory">TimeSheet History</button>
+        </div>
+        <div class="logoutdiv">
+            <button id="logoutButton">Logout</button>
+            </div>
+</div>
+    
     <div class="timesheet" id="timesheetcontainer">
         
         <div id="container">
