--- a/private/previous_timesheet/previousTimesheet.html
+++ b/private/previous_timesheet/previousTimesheet.html
@@ -12,13 +12,14 @@
     </head>
     <body>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-
+        <div class="containerMain">
         <form id="formweek">
             <label for="week">Choose a week for time sheet</label>
             <input type="week" name="week" id="weekseclecter" required>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="sbmt" >
         </form>
-
+        </div>
+        <br><br><br>
         <div class="timesheet" id="timesheetcontainer">
             
             <div id="container">
