--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="Aprovetime.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="welcome-title"><span>Welcome Manager</span></div>
 
 
     <div id="UserHolder"></div>
-    <table id="TimeSheetContainer">        
-    </table>    
+    <div class="timesheetcontainer">
+        <table id="TimeSheetContainer">        
+        </table>    
+    </div>
 
     <script src="Aprovetime.js"></script>
 </body>
