En masse css og ændring af font i navbar

--- a/private/userpage.html
+++ b/private/userpage.html
@@ -47,11 +47,9 @@
     <div class="container">
         <div class="innermenu">
             <button id="CurrentTimesheet">Current Timesheet</button>   
-            <button id="TimeSheetHistory">TimeSheet History</button>
+            <button id="TimeSheetHistory"><a href="previous_timesheet/previousTimesheet.html">Timesheet History</a> </button> 
         </div>
-        <div class="logoutdiv">
-            <button id="logoutButton">Logout</button>
-            </div>
+        
 </div>
     
     <div class="timesheet" id="timesheetcontainer">
