--- a/ProjectManager/ProjectManager.html
+++ b/ProjectManager/ProjectManager.html
@@ -45,16 +45,14 @@
             <button id="CreateTaskButton">Create Task</button>
         <br><br>
         </div>
-        <div class="logoutdiv">
-            <button id="logoutButton">Logout</button>
-        </div>
+        
   </div>
 
         <div id="LinkUserToProjectContainer">
             <form id="LinkUserToProjectForm">
-                <label for="userToLink">link User</label><br>
+                <label for="userToLink">Link User</label><br>
                 <input type="text" name="userToLink" id="userToLink" placeholder="UserName" required> <br> <br>
-                <label for="projectToLinkForUser">link Project</label><br>
+                <label for="projectToLinkForUser">Link Project</label><br>
                 <input type="text" name="projectToLinkForUser" id="projectToLinkForUser" placeholder="ProjectName" required> <br> <br>
                 <input type="submit" class="sbmt" value="Submit">
             </form>
