--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -38,7 +38,7 @@
 
 
     <div id="UserHolder"></div>
-    <div class="timesheetcontainer">
+    <div class="timesheetcontainerClass">
         <table id="TimeSheetContainer">        
         </table>    
     </div>
