Welcome now says username

--- a/private/homepage.html
+++ b/private/homepage.html
@@ -38,7 +38,8 @@
 </div><!--Navigation Bar End-->
 
 
-    <div class="welcome-title"><span>Welcome</span></div>
+    <div class="welcome-title">
+    <span id="WelcomeText">Welcome</span></div>
     <div class="container">
         <div class="innermenu">
             <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
