mobile version update

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -43,7 +43,7 @@
         <div class="innermenu">
             <button id="userButton">Create user</button>
             <button id="projectButton">Create project</button>
-            <button id="userLevelButton">Set user level</button>
+            <button id="userLevelButton">Set and see user level</button>
             <button id="LinkUserToManagerButton">Add user to manager</button>
             <button id="CreateTaskButton">Create Task</button>
             <button id="EmailNotificationButton">Email Notification</button>
