Welcome title moved from every site

--- a/private/previous_timesheet/previousTimesheet.html
+++ b/private/previous_timesheet/previousTimesheet.html
@@ -20,6 +20,7 @@
                     <i id="menu-icon" class="fa-solid fa-bars"></i> MENU
                 </p>
             </div>
+            <div class="welcome-title"><span>Timesheet History</span></div>
         </div>
         <div id="menu" class="menu-closed">
             <ul class="unselectable">
