--- a/private/userpage.html
+++ b/private/userpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>timeSheet</title>
+    <title>Timesheet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
@@ -21,6 +21,7 @@
                     <i id="menu-icon" class="fa-solid fa-bars"></i> MENU
                 </p>
             </div>
+            <div class="welcome-title"><span>Timesheets</span></div>
         </div>
         <div id="menu" class="menu-closed">
             <ul class="unselectable">
@@ -43,7 +44,7 @@
 
 
 
-    <div class="welcome-title"><span>TimeSheets</span></div>
+
     <div class="container">
         <div class="innermenu">
             <button id="CurrentTimesheet">Current Timesheet</button>   
