--- a/private/homepage.html
+++ b/private/homepage.html
@@ -50,6 +50,8 @@
             <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
             <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
             <button class="centered" id="ProjectManagerButton"><a href="/ProjectManager/ProjectManager.html">Project Manager</a></button>
+            <button class="centered" id="exportButtonPDF">Export PDF</button>
+            <button class="centered" id="exportButtonXlsx">Export Excel</button>
         </div>
 </div>  
     <div id="profileInfo">
