--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -23,7 +23,7 @@
                         MENU
                     </p>
                 </div>
-                <div class="welcome-title"><span>Approve Timesheets</span></div>
+                <div class="welcome-title"><span>Approve </span></div>
             </div>
             <div id="menu" class="menu-closed">
                 <ul class="unselectable">
