--- a/private/previous_timesheet/previousTimesheet.html
+++ b/private/previous_timesheet/previousTimesheet.html
@@ -23,7 +23,7 @@
                     MENU
                 </p>
             </div>
-            <div class="welcome-title"><span>Timesheet History</span></div>
+            <div class="welcome-title"><span>History</span></div>
         </div>
         <div id="menu" class="menu-closed">
             <ul class="unselectable">
