--- a/private/previous_timesheet/previousTimesheet.html
+++ b/private/previous_timesheet/previousTimesheet.html
@@ -27,11 +27,11 @@
         </div>
         <div id="menu" class="menu-closed">
             <ul class="unselectable">
-                <li><a class="navbar" id="NavHome" href="../private/homepage.html">Home</a></li>
-                <li><a class="navbar" id="NavSheet" href="../private/userpage.html">See Time Sheet</a></li>
-                <li><a class="navbar" id="NavAdmin" href="../admin/admin.html">Admin</a></li>
-                <li><a class="navbar" id="NavManager" href="../manager/manager.html">Manager</a></li>
-                <li><a class="navbar" id="NavProjectManager" href="../ProjectManager/ProjectManager.html">Project Manager</a></li>
+                <li><a class="navbar" id="NavHome" href="../../private/homepage.html">Home</a></li>
+                <li><a class="navbar" id="NavSheet" href="../../private/userpage.html">See Time Sheet</a></li>
+                <li><a class="navbar" id="NavAdmin" href="../../admin/admin.html">Admin</a></li>
+                <li><a class="navbar" id="NavManager" href="../../manager/manager.html">Manager</a></li>
+                <li><a class="navbar" id="NavProjectManager" href="../../ProjectManager/ProjectManager.html">Project Manager</a></li>
                 <li><a class="navbar" id="NavLogout">Log Out</a></li>
                 <div class="signal">
                  <img src="navbar/Signal.svg" style="width: 500px;">
