added css classes moved export buttons to userpage

--- a/ProjectManager/ProjectManager.html
+++ b/ProjectManager/ProjectManager.html
@@ -43,9 +43,9 @@
     </div><!--Navigation Bar End-->
     <div class="container">
         <div class="innermenu">
-            <button id="LinkUserToProjectkButton">Create a link to a user</button>
-            <button id="showProjectsButton">Show Projects</button>
-            <button id="CreateTaskButton">Create Task</button>
+            <button class= "WhiteButton" id="LinkUserToProjectkButton">Create a link to a user</button>
+            <button class= "WhiteButton" id="showProjectsButton">Show Projects</button>
+            <button class= "WhiteButton" id="CreateTaskButton">Create Task</button>
         <br><br>
         </div>
         
