--- a/admin/admin.html
+++ b/admin/admin.html
@@ -165,7 +165,7 @@
 
 
 <br>
-    <div class="pdf">
+    <div class="export">
         <button id="exportButton">Get PDF</button>
         <button id="exportButtonXlsx">Get xlsx file</button>
     </div>
