--- a/private/homepage.html
+++ b/private/homepage.html
@@ -46,12 +46,10 @@
 
     <div class="container">
         <div class="innermenu">
-            <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
-            <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
-            <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
-            <button class="centered" id="ProjectManagerButton"><a href="/ProjectManager/ProjectManager.html">Project Manager</a></button>
-            <button class="centered" id="exportButtonPDF">Export PDF</button>
-            <button class="centered" id="exportButtonXlsx">Export Excel</button>
+            <button class="WhiteButton"><a href="userpage.html">Time sheet</a> </button> 
+            <button class="WhiteButton" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
+            <button class="WhiteButton" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
+            <button class="WhiteButton" id="ProjectManagerButton"><a href="/ProjectManager/ProjectManager.html">Project Manager</a></button>
         </div>
 </div>  
     <div id="profileInfo">
