--- a/private/userpage.html
+++ b/private/userpage.html
@@ -50,7 +50,7 @@
 
     <div class="container">
         <div class="innermenu">  
-            <button id="TimeSheetHistory"><a href="previous_timesheet/previousTimesheet.html">Timesheet History</a> </button> 
+            <button class="WhiteButton" id="TimeSheetHistory"><a href="previous_timesheet/previousTimesheet.html">Timesheet History</a> </button> 
         </div>
         
 </div>
@@ -65,7 +65,12 @@
     </div>
     <div class="btn"><button id="AddRow">Add Row</button></div><br></br>
     <button id="timeSheetButton" name="timeSheetButton">Submit Timesheet</button>
-
+    <br> <br>
+<div class = "export" >
+    <button class="WhiteButton" id="exportButtonPDF">Export PDF</button>
+    <button class="WhiteButton" id="exportButtonXlsx">Export Excel</button>
+   
+</div>
     <script src="code.js"></script>
     <script src="timeSheet.js"></script>
     <script src="makeTable.js"></script>
