Mere css og rette Create project på manager

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -82,7 +82,7 @@
             <label for="projectEndDate">End Date</label><br>
             <input type="date" id="projectEndDate" name="projectEndDate"  required> <br><br>
 
-            <label for="ProjectManager">Manager</label><br>
+            <label for="ProjectManager">Project Manager</label><br>
             <input type="text" id="ProjectManager" name="ProjectManager" placeholder="ProjectManager" required> <br><br>
 
             <input type="submit" class="sbmt" value="Create">
