--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -45,8 +45,8 @@
 
 
     <div id="UserHolder"></div>
-    <div class="timesheetcontainerClass">
-        <table id="TimeSheetContainer">        
+    <div class="timesheetcontainerClass" style="overflow-x: auto;">
+        <table  id="TimeSheetContainer">        
         </table>    
     </div>
 
