--- a/manager/manager.html
+++ b/manager/manager.html
@@ -53,26 +53,25 @@
             <button id="ManagerButton"><a href="./Aprovetime.html">Approve TimeSheets</a></button>
         </div>    
   </div>
-    <div id="projectCreation">
-        <form id="projectCreationForm">
-            <label for="projectName">Project name</label><br>
-            <input type="text" id="projectName" name="projectName" placeholder="ProjectName" required> <br><br>
+  <div id="projectCreation">
+    <form id="projectCreationForm">
+        <label for="projectName">Project name</label><br>
+        <input type="text" id="projectName" name="projectName" placeholder="ProjectName" required> <br><br>
 
-            <label for="projectStartDate">Start Date</label><br>
-            <input type="date" id="projectStartDate" name="projectStartDate"  required> <br><br>
+        <label for="projectStartDate">Start Date</label><br>
+        <input type="date" id="projectStartDate" name="projectStartDate"  required> <br><br>
 
-            <label for="projectEndDate">End Date</label><br>
-            <input type="date" id="projectEndDate" name="projectEndDate"  required> <br><br>
+        <label for="projectEndDate">End Date</label><br>
+        <input type="date" id="projectEndDate" name="projectEndDate"  required> <br><br>
 
-            <label for="ProjectManager">Manager</label><br>
-            <input type="text" id="ProjectManager" name="ProjectManager" placeholder="ProjectManager" required> <br><br>
+        <label for="ProjectManager">Project Manager</label><br>
+        <input type="text" id="ProjectManager" name="ProjectManager" placeholder="ProjectManager" required> <br><br>
 
-            <label for="projectHoursSpent">Total Hours</label><br>
-            <input type="number" id="projectHoursSpent" name="projectHoursSpent" placeholder="0" required> <br><br>
+        <input type="submit" class="sbmt" value="Create">
 
-            <input type="submit" class="sbmt" value="Create">
+    </form>
 
-        </form>
+</div>
 
 
 
