--- a/private/previous_timesheet/previousTimesheet.html
+++ b/private/previous_timesheet/previousTimesheet.html
@@ -49,8 +49,12 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
         <div class="containerMain">
         <form id="formweek">
-            <label for="week">Choose a week for time sheet</label>
-            <input type="week" name="week" id="weekseclecter" required>
+            <label for="year">Choose a week for time sheet</label>
+            <br>
+            <label for="year">Year</label>
+            <input type="text" name="year" id="year" required>
+            <label for="week">week</label>
+            <input type="text" name="week" id="week" required>
             <input type="submit" value="Submit" id="sbmt" >
         </form>
         </div>
